# TestGames

./: .gitignore
2D_GAME/: .gitignore  CMakeLists.txt  main.cpp
2D_GAME/Engine/2D/: Game2D.h
2D_GAME/Engine/Common/Headers/: CommonHeaders.h  PrimitiveTypes.h  RenderingHeaders.h
2D_GAME/Engine/Common/Rendering/: OpenGL.h
BrickBreaker/: .gitignore  BrickBreaker  CMakeConfig.txt  CMakeLists.txt  CMakeRC.cmake  EngineInclude  LICENSE  ReadMe.md  main.cpp  makefile
BrickBreaker/Engine/: lastProcessingTimes.txt
BrickBreaker/Engine/Shaders/: particle.frag  particle.glsl  particle.vert  shape.vert  sprite.frag  sprite.glsl  sprite.vert
BrickBreaker/EngineFiles/2D/: Entity2D.h  Game2D.h  ResourceManager.h
BrickBreaker/EngineFiles/2D/Components/: Transform2D.h
BrickBreaker/EngineFiles/2D/Rendering/: Shader.h  SpriteRenderer.h  Texture2D.h
BrickBreaker/EngineFiles/2D/Types/: Vector2.h
BrickBreaker/EngineFiles/Common/: Event.h  Log.h  Macros.h  PrimitiveTypes.h  RenderingHeaders.h
BrickBreaker/EngineFiles/Input/: Keyboard.h
BrickBreaker/Game/: Brick.cpp  Brick.h  BrickBreaker.cpp  BrickBreaker.h  GameLevel.cpp  GameLevel.h  Player.cpp  Player.h
BrickBreaker/Game/include/: Ball.gen.hpp  Ball.hpp  Brick.gen.hpp  Brick.hpp  BrickBreaker.gen.hpp  BrickBreaker.hpp  GameLevel.hpp  Paddle.gen.hpp  Paddle.hpp
BrickBreaker/Game/src/: Ball.cpp  Brick.cpp  BrickBreaker.cpp  GameLevel.cpp  Paddle.cpp
BrickBreaker/GameCode/: Ball.cpp  Ball.h  Brick.cpp  Brick.h  BrickBreaker.cpp  BrickBreaker.h  GameLevel.cpp  GameLevel.h  Paddle.cpp  Paddle.h
Test/: CMakeLists.txt  main.cpp  makefile
Test/Game/include/: Test.hpp
Test/Game/src/: Test.cpp
